<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageViewAvatar"
                android:layout_width="@dimen/sign_avatar_size"
                android:layout_height="@dimen/sign_avatar_size"
                android:layout_margin="@dimen/common_spacing"
                android:src="@drawable/ic_baseline_person_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_spacing"
                android:text="@string/sign_user_name"
                android:textSize="@dimen/profile_user_name_text_size"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/imageViewAvatar"
                app:layout_constraintTop_toTopOf="@id/imageViewAvatar"
                app:layout_constraintBottom_toBottomOf="@id/imageViewAvatar" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_feed" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_jobs" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/fabGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="fabAddPost, fabAddEvent, fabAddJob"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAdd"
        style="@style/Theme.Fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_add_24"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible"
        android:contentDescription="@string/description_fab_add" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fabAddPost"
        style="@style/Theme.Fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_post"
        app:icon="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toTopOf="@id/fabAddEvent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fabAddEvent"
        style="@style/Theme.Fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_event"
        app:icon="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toTopOf="@id/fabAddJob"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fabAddJob"
        style="@style/Theme.Fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_job"
        app:icon="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toTopOf="@id/fabAdd"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>