<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.NewEventFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_xs"
                android:layout_marginTop="@dimen/common_spacing"
                android:gravity="start|top"
                android:hint="@string/text_new_event"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:padding="@dimen/spacing_s"
                tools:ignore="MissingConstraints"
                tools:text="@tools:sample/lorem[10]" />

            <FrameLayout
                android:id="@+id/frameLayoutPhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="gone">

                <ImageView
                    android:id="@+id/imageViewPhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/description_photo"
                    tools:srcCompat="@tools:sample/avatars[2]" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonRemovePhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:text="@string/clear"
                    android:textAllCaps="false"
                    app:cornerRadius="@dimen/button_corner_radius" />

            </FrameLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textDate"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/common_spacing"
                android:layout_marginTop="@dimen/common_spacing"
                android:gravity="start|top"
                android:hint="@string/text_new_event_date"
                android:inputType="date"
                android:padding="@dimen/spacing_s"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    tools:text="@tools:sample/date/ddmmyy" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textTime"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/common_spacing"

                android:gravity="start|top"
                android:hint="@string/text_new_event_time"
                android:inputType="time"
                android:padding="@dimen/spacing_s"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    tools:text="@tools:sample/date/hhmm" />

            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/radioGroupTypeEvent"
                android:checkedButton="@+id/radioButtonOnlineEvent"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/radioButtonOnlineEvent"
                    android:layout_width="wrap_content"
                    android:layout_marginHorizontal="@dimen/common_spacing"
                    android:layout_height="match_parent"
                    android:text="@string/online_event"/>
                <RadioButton
                    android:id="@+id/radioButtonOfflineEvent"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/common_spacing"
                    android:text="@string/offline_event"/>
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textLink"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/common_spacing"
                android:gravity="start|top"
                android:hint="@string/text_link"
                android:inputType="textWebEditText"
                android:padding="@dimen/spacing_s"
                tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                tools:text="@tools:sample/first_names[9]" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonAddSpeakers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/common_spacing"
                android:text="@string/add_speakers"
                android:textAllCaps="false"
                app:cornerRadius="@dimen/button_corner_radius" />

        </LinearLayout>

    </ScrollView>


    <LinearLayout
        android:id="@+id/bottomAppBar"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewTakePhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:contentDescription="@string/description_take_photo"
            android:padding="@dimen/common_spacing"
            android:src="@drawable/ic_baseline_photo_camera_48" />

        <ImageView
            android:id="@+id/imageViewPickPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:contentDescription="@string/description_pick_photo"
            android:padding="@dimen/common_spacing"
            android:src="@drawable/ic_baseline_photo_48" />

        <ImageView
            android:id="@+id/imageViewPickGeo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:contentDescription="@string/description_pick_photo"
            android:padding="@dimen/common_spacing"
            android:src="@drawable/ic_outline_add_location_alt_48" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>